@@ -56,6 +56,7 @@ SVN trunk:
    * updated weblist.pl to display translation information
    * updated weblist.pl and webtgz.pl to use standard wesnoth logo banner
    * updated webtgz.pl to request campaign info only for the campaign of interest
+   * updated weblist.pl to display sizes in KB.
  * fix untranslated unit create dialog (#4424)
  * random map generator now uses island_size (#4458)
  * various bug fixes and code cleanups
